# FFTsurf

./: .gitignore  help.txt  meshconv.py  mymake.sh  notes.odt  todo.txt
src/: CMakeLists.txt  fftsurf.f90  fftsurf_bak.f90
src/bernstein/: bernbivar2univar.f90  berndiff.f90  berndiff1.f90  berndiff2.f90  de_casteljau.f90  header  makemodule.py  reset_bernstein_series1.f90  reset_bernstein_series2.f90  subdiv1.f90  subdiv2.f90  subdiv2_along_u.f90  subdiv2_along_v.f90  write_bernstein_series1.f90  write_bernstein_series2.f90
src/chebyshev/: cgl_points.f90  ch2be_matrix.f90  chebbivar2univar.f90  chebdiff.f90  chebdiff1.f90  chebdiff2.f90  chebfit1.f90  chebval1.f90  chebval1_n.f90  chebval2.f90  chebval2_corners.f90  chebval2_mn.f90  chebval2_n.f90  chgvar.f90  chgvar1.f90  chgvar2.f90  cht_matrix.f90  clenshaw.f90  cs2edge2cs1.f90  delete_chebyshev_series1.f90  delete_chebyshev_series2.f90  economization1.f90  economization2.f90  fcht1.f90  fcht2.f90  get_ch2be_from_collection.f90  header  ifcht1.f90  ifcht1_padded.f90  ifcht2.f90  ifcht2_padded.f90  ith_cgl_point.f90  makemodule.py  read_chebyshev_series1.f90  read_chebyshev_series2.f90  reset_chebyshev_series1.f90  reset_chebyshev_series2.f90  sizeminw.f90  write_chebyshev_series1.f90  write_chebyshev_series2.f90
src/dfftpack/: Makefile
src/intersection/: CMakeLists.txt  add_intersection_curve.f90  add_intersection_point.f90  add_intersection_point_nocheck.f90  add_ipoint_from_bottom_up.f90  characterize_tangential_intersection_point.f90  check_curve_surface_intersection_point.f90  check_unicity.f90  (+60 more)
(+6397 files in other folders)
